# rust

./: .gitignore  Cargo.toml  README.md  build.rs  data.json
.github/workflows/: main.yml  release.yml
src/: main.rs
src/util/: mod.rs
