[package]
name = "new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.winresource]
  

[dependencies]
crossterm = "0.27.0"
either = "1.10.0"
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17" 