[package]
name = "rust_grade"
version = "0.1.1"
edition = "2021"
authors = ["yPiuro <mail@piuro.lol>"]
repository = "yPiuro/rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.winresource]
OriginalFilename = "main.rs"
LegalCopyright = "Copyright © 2024"
FileDescription = "Simple program for a asingment"
ProductName = "Rust Grade"
ProductVersion = "0,1,1"

[dependencies]
crossterm = "0.27.0"
either = "1.10.0"
native-dialog = "0.7.0"
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17" 
