[package]
name = "rust_grade"
version = "0.1.3"
edition = "2021"
authors = ["yPiuro <mail@piuro.lol>"]
repository = "yPiuro/rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
either = "1.10.0"
native-dialog = "0.7.0"
terminal_size = "0.3.0"

[build-dependencies]
winresource = "0.1.17" 

[package.metadata.winresource]
OriginalFilename = "main.rs"
ProductName = "Rust Grade"
ProductVersion = "0.1.3"

#LegalCopyright = "Copyright © 2024"
#FileDescription = "Simple program for a asingment"